<package>
  <name>jb2a_description</name>
  <version>0.3.0</version>

  <description>This package contains jb2a description.</description>
  <author email="nicolaypierre.95@gmail.com">Pierre Nicolay</author>

  <maintainer email="nicolaypierre.95@gmail.com">Pierre Nicolay</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
