<?xml version="1.0"?>
<package format="2">
  <name>jb2a_control</name>
  <version>0.0.0</version>
  <description>The jb2a_control package</description>

  <maintainer email="pierre@todo.todo">pierre</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
