<?xml version="1.0"?>
<package format="2">
  <name>jb2a_description</name>
  <version>0.0.0</version>

  <description>This package contains jb2a description.</description>
  <author email="nicolaypierre.95@gmail.com">Pierre Nicolay</author>

  <maintainer email="nicolaypierre.95@gmail.com">Pierre Nicolay</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
