<?xml version="1.0"?>
<package format="2">
  <name>jb2a_gazebo</name>
  <version>0.0.0</version>
  <description>The jb2a_gazebo package</description>
  <maintainer email="pierre@todo.todo">pierre</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>jb2a_control</exec_depend>
  <exec_depend>jb2a_description</exec_depend>
  <exec_depend>xacro</exec_depend>   
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
